--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-[200~# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+app/storage/files/*
 
 # Environments
 .env
