--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,11 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [
-    "python-pptx (>=1.0.2,<2.0.0)",
-    "fastapi (>=0.115.11,<0.116.0)",
-    "uvicorn (>=0.34.0,<0.35.0)",
-    "pydantic (>=2.10.6,<3.0.0)"
-]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+fastapi = "^0.115.11"
+pydantic = "^2.10.6"
 
 
 [build-system]
