--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,20 @@
 [project]
 name = "pptx-api-node"
 version = "0.1.0"
-description = ""
+description = "API for generating PowerPoint presentations from JSON schema"
 authors = [
     {name = "Charles Goddard",email = "chargoddard@gmail.com"}
 ]
-readme = "README.md"
 requires-python = ">=3.10"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.115.11"
 pydantic = "^2.10.6"
-
+python-pptx = "^1.0.2"
+uvicorn = "^0.34.0"
+jinja2 = "^3.1.6"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
