--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = "^2.10.6"
 python-pptx = "^1.0.2"
 uvicorn = "^0.34.0"
 jinja2 = "^3.1.6"
+boto3 = "^1.37.10"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
