--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,17 +2,28 @@
 name = "pptx-api"
 version = "0.1.0"
 description = "API for generating PowerPoint presentations from JSON schema"
-authors = [
-    {name = "Charles Goddard", email = "chargoddard@gmail.com"}
-]
+authors = [{ name = "Charles Goddard", email = "chargoddard@gmail.com" }]
 requires-python = ">=3.10"
 package-mode = false
+
+[tool.poetry]
+include = [
+    { path = "app/font_files", format = [
+        "sdist",
+        "wheel",
+    ] },
+    { path = "app/static", format = [
+        "sdist",
+        "wheel",
+    ] },
+
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.115.11"
 pydantic = "^2.10.6"
-python-pptx = "^1.0.2"
+python-pptx = { git = "https://github.com/vpcano/python-pptx.git", rev = "f87f0f469d95d4dab797f1edad4ebbdab4a84f04" }
 uvicorn = "^0.34.0"
 jinja2 = "^3.1.6"
 boto3 = "^1.37.10"
