--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,12 @@ include = [
 python = "^3.10"
 fastapi = "^0.115.11"
 pydantic = "^2.10.6"
-python-pptx = { git = "https://github.com/vpcano/python-pptx.git", rev = "f87f0f469d95d4dab797f1edad4ebbdab4a84f04" }
+python-pptx = { git = "https://github.com/cg123/python-pptx.git", rev = "aa444db2ab00bd1f30065c0719e8e194232b4dcf" }
 uvicorn = "^0.34.0"
 jinja2 = "^3.1.6"
 boto3 = "^1.37.10"
 requests = "^2.32.3"
+pip = "^25.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
